src/test/ui/variance/variance-types-bounds.stderr
error[E0208]: [+, +]
  --> $DIR/variance-types-bounds.rs:7:1
   |
LL | struct TestImm<A, B> {
   | ^^^^^^^^^^^^^^^^^^^^

error[E0208]: [+, o]
  --> $DIR/variance-types-bounds.rs:13:1
   |
LL | struct TestMut<A, B:'static> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0208]: [+, o]
  --> $DIR/variance-types-bounds.rs:19:1
   |
LL | struct TestIndirect<A:'static, B:'static> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0208]: [o, o]
  --> $DIR/variance-types-bounds.rs:24:1
   |
LL | struct TestIndirect2<A:'static, B:'static> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0208]: [o, o]
  --> $DIR/variance-types-bounds.rs:38:1
   |
LL | struct TestObject<A, R> {
   | ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 5 previous errors

